<resources>
    <string name="app_name">Mental Health Checker</string>
    <string name="outdoorYellowTentBlurred">outdoorYellowTentBlurred</string>
    <string name="mhLogo">mhLogo</string>

    <!-- Strings related to Sign In Activity -->
    <string name="username">username</string>
    <string name="sign_in_button">Sign In</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_link_to_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_password_short">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="camera_permission">Take a Profile Picture</string>
    <string name="sign_up_background">sign_up_background</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="failed_auth">Authentication failed, check your email and password or sign up</string>
    <string name="logout">Log out</string>

    <!--Strings related to Sign Up Activity-->
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up_new_user">sign_up_new_user</string>
    <string name="button_register">Register</string>
    <string name="already_have_account">Already have an account? Sign In</string>

    <!--activity_changeCredentials strings-->
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_back"><![CDATA[<< Back]]></string>
    <string name="prompt_new_email">New Email</string>
    <string name="prompt_new_password">New Password</string>
    <string name="button_change_email">Change email </string>
    <string name="button_change_password">Change password </string>
    <string name="button_confirm_change">Confirm change </string>
    <string name="button_send">Send to change details</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="forgot_password_message">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_navigation">PCIDA Prototype App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PCIDA user profile</string>
    <string name="nav_header_subtitle">pcida.android@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--activity_navigation_drawer-->
    <string name="action_settings">Settings</string>
    <string name="slide_show">Slide Show</string>
    <string name="share_profile">Share this page</string>
    <string name="share_options">Share Options</string>
    <string name="email_profile">Share by Email</string>

    <!--activity_navigation_drawer-->
    <string name="sign_out">Sign Out</string>
    <string name="add_new_symptoms">Add New Symptoms:</string>
    <string name="symptom_title">Symptom Title</string>
    <string name="add">Add</string>
    <string name="view_all_symptoms">View All Symptoms</string>

    <!--activity_main-->
    <string name="mental_health_symptom">Symptoms</string>
    <string name="checkup">Record your Mental Health symptoms!</string>
    <string name="check_your_symptoms">Check your Symptoms!</string>
    <string name="assessment">Assessment</string>
    <string name="additional_notes_here">Additional Notes Here</string>
    <string name="appointments">Appointments</string>

    <!--navigational_drawer-->
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

</resources>
