<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shingiraimarikasi.PicidaMScFYP.controller.SignupActivity">

    <ImageView
        android:id="@+id/signup_background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/sign_up_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/darkcloudblurred" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/please_sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="22sp"
            app:fontFamily="sans-serif-condensed" />

        <EditText
            android:id="@+id/editTextNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_user_icon"
            android:drawableStart="@drawable/ic_user_icon"
            android:ems="10"
            android:hint="@string/prompt_new_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextNewPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            tools:drawableLeft="@drawable/ic_pass_icon" />

        <EditText
            android:id="@+id/editTextRe-enterPassd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_pass_icon"
            android:drawableStart="@drawable/ic_pass_icon"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_newuser_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#c4d230"
            android:text="@string/button_register"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup_forgot_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:text="@string/button_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorRegister" />

        <Button
            android:id="@+id/signup_already_haveAcc_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textColor="@color/colorRegister" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
