<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorConstraintLayoutBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/symptomFormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_new_symptoms"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/symptomTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/symptomFormTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"
            android:hint="@string/symptom_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold"
            android:inputType=""
            android:autofillHints="" tools:targetApi="o" />

        <Button
            android:id="@+id/addSymptomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/allSymptomButton"
            android:layout_below="@+id/symptomNotesEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="29dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/colorTextIcons"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/symptomNotesEditText"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/symptomTitleEditText"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:ems="10"
            android:hint="@string/additional_notes_here"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            android:autofillHints="" tools:targetApi="o" />

        <Button
            android:id="@+id/allSymptomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/view_all_symptoms"
            android:textColor="@color/colorTextIcons" tools:targetApi="lollipop" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_navigation"
        app:menu="@menu/activity_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>