<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#025760"
    tools:layout_editor_absoluteY="25dp">

    <!--find appropriate logo-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="#07bdd8"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pass_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formLogo"
        tools:paddingTop="50dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="359dp"
            android:layout_height="58dp"
            android:background="#f4511e"
            android:text="@string/sign_in_button"
            android:textSize="18sp"
            tools:layout_marginBottom="10dp"
            tools:layout_marginTop="20dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/mhLogo"
        android:scaleType="fitCenter"
        android:src="@drawable/mental_health_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="659dp"
        android:layout_marginEnd="411dp"
        android:layout_marginRight="411dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="-9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="659dp"
        android:layout_marginEnd="411dp"
        android:layout_marginRight="411dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forgot_pass_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/button_forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorRegister"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_newuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/signup_newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:background="@null"
        android:text="@string/button_link_to_register"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorRegister"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_btn" />

    <!--to change_opacity of the background colour add 80 in font of the #-->


</android.support.constraint.ConstraintLayout>